<resources>
    <string name="app_name">Alarm</string>
    <string name="title_home">Alarm</string>
    <string name="title_dashboard">History</string>
    <string name="title_notifications">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="weekdays">Weekday</string>
    <string name="everyday">Everyday</string>
    <string name="weekends">Weekend</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="Default">Default</string>
    <string name="Picture">Picture</string>
    <string name="Shake">Shake</string>
    <string name="Math">Math</string>
    <string name="Scan">Scan code</string>

    <string name="mondayShort">Mon</string>
    <string name="tuesdayShort">Tu</string>
    <string name="wednesdayShort">Wed</string>
    <string name="thursdayShort">Thur</string>
    <string name="fridayShort">Fri</string>
    <string name="saturdayShort">Sat</string>
    <string name="sundayShort">Sun</string>

    <string name="mission_alarm">Mission Alarm</string>
    <string name="repeat">Repeat</string>
    <string name="ringtone">Ringtone</string>
    <string name="snooze">Snooze</string>
    <string name="label">Label</string>
    <string name="none">None</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="remain_part1">Alarm set for </string>
    <string name="remain_part2">from now</string>

    <string name="radio_minutes_1">OFF</string>
    <string name="radio_minutes_2">1 minutes</string>
    <string name="radio_minutes_3">5 minutes</string>
    <string name="radio_minutes_4">10 minutes</string>
    <string name="radio_minutes_5">15 minutes</string>
    <string name="radio_minutes_6">20 minutes</string>
    <string name="radio_minutes_7">15 minutes</string>
    <string name="radio_minutes_8">30 minutes</string>

    <!-- pref String -->
    <string name="pref_sound">Sound</string>
    <string name="pref_volume">Gradually increase volume</string>
    <string name="pref_auto_dismiss">Auto-dismiss</string>
    <string name="pref_volume_time"> seconds</string>
    <string name="pref_off">off</string>
    <string name="pref_on">on</string>
    <string name="pref_build_in_speaker">Use the built-in speaker</string>
    <string name="pref_build_in_speaker_note">Always ring on phone speakers</string>
    <string name="pref_alarm_mute">Alarm mute duration</string>
    <string name="pref_general">General</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_default_alarm_setting">Default alarm setting</string>
    <string name="pref_default_alarm_setting_note">Applied when setting a new alarm</string>
    <string name="pref_display_next_alarm">Display next alarm</string>
    <string name="pref_prevent_turn_off">Prevent power off when ringging</string>
    <string name="pref_prevent_turn_off_note">Prevent power off when ringging</string>
    <string name="preview_mode">This is Preview mode</string>
    <string name="scan_a_bar_code">Scan a barcode</string>
    <string name="setting_math_title">Setting Math Mission</string>
    <string name="setting_math_title_bottom">Do math</string>
    <string name="do_title">Do</string>
    <string name="do_title_time">Times</string>
    <string name="math">math</string>
    <string name="setting_shake_title">Setting Shake Mission</string>
    <string name="setting_shake_title_bottom">Sensitivity</string>
    <string name="do_title_shake">Shake your phone</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>


</resources>
